# gendiff

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yml  linter.yml
gendiff/: __init__.py  cli.py  constants.py  differ.py  loader.py  parser.py  parsing.py
gendiff/formatters/: __init__.py  json.py  main.py  plain.py  stylish.py
gendiff/scripts/: gen_diff.py  gendiff.py
gendiff/utils/: constants.py  differ.py  formatter.py  loader.py  parser.py
tests/: test_gendiff.py
tests/fixtures/: expected.txt  expected_help.txt  expected_json.txt  recursive1.yaml
